--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# Blockchain Configuration
+PRIVATE_KEY=your_wallet_private_key_here
+POLYGONSCAN_API_KEY=your_polygonscan_api_key_here
+
 # Web3 Configuration
 REACT_APP_WALLET_CONNECT_PROJECT_ID=2f05ae7f1116030fde2d36508f472bfb
 
