--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ REACT_APP_WALLET_CONNECT_PROJECT_ID=6882f4b8f0506902038b0a3099de42ce
 # API Configuration (for backend integration)
 REACT_APP_API_BASE_URL=https://tmp.sabirideweb.com.ng
 REACT_APP_API_KEY=demo_api_key
+VITE_API_BASE_URL=http://localhost:8787/api
+VITE_SABI_RIDE_API_URL=https://tmp.sabirideweb.com.ng/api/v1
+
 
 # Contract Addresses (demo addresses)
 REACT_APP_SABI_CASH_CONTRACT_ADDRESS=0x53308b85F0Fceadfc0a474eb0c196F0F02CD4983
