--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "NODE_ENV=development node --watch src/index.js",
+    "dev": "set NODE_ENV=development&& node --watch src/index.js",
     "start": "NODE_ENV=production node src/index.js",
     "db:setup": "node src/scripts/setupDatabase.js",
     "db:seed": "node src/scripts/seedDatabase.js"
