--- a/package.json
+++ b/package.json
@@ -16,29 +16,39 @@
 		"@radix-ui/react-toast": "^1.2.14",
 		"@rainbow-me/rainbowkit": "^2.2.8",
 		"@tailwindcss/postcss": "^4.1.11",
-		"@tanstack/react-query": "^5.83.0",
+		"@tanstack/query-core": "^5.85.5",
+		"@tanstack/react-query": "^5.85.5",
 		"@thirdweb-dev/react": "^3.16.5",
 		"@thirdweb-dev/sdk": "^3.10.67",
 		"@uniswap/sdk-core": "^5.3.1",
+		"@uniswap/smart-order-router": "^4.22.20",
 		"@uniswap/v3-sdk": "^3.13.0",
-		"@uniswap/smart-order-router": "^3.50.0",
+		"@wagmi/core": "^2.20.2",
+		"assert": "^2.1.0",
 		"axios": "^1.7.9",
+		"buffer": "^6.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"crypto-browserify": "^3.12.1",
+		"ethers": "^5.8.0",
 		"framer-motion": "^12.23.6",
 		"lucide-react": "^0.525.0",
+		"process": "^0.11.10",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.5.0",
 		"react-router": "^7.7.0",
 		"react-router-dom": "^7.7.0",
+		"stream-browserify": "^3.0.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
-		"viem": "^2.32.0",
+		"util": "^0.12.5",
+		"viem": "^2.36.0",
 		"wagmi": "^2.15.7"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@rollup/plugin-inject": "^5.0.5",
 		"@types/node": "^24.0.15",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
