--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
 		"@wagmi/core": "^2.20.2",
 		"assert": "^2.1.0",
 		"axios": "^1.7.9",
+		"bcryptjs": "^3.0.2",
 		"buffer": "^6.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"crypto": "^1.0.1",
 		"crypto-browserify": "^3.12.1",
 		"ethers": "^5.8.0",
+		"express": "^4.21.2",
 		"framer-motion": "^12.23.6",
 		"lucide-react": "^0.525.0",
 		"process": "^0.11.10",
