--- a/server/.env.example
+++ b/server/.env.example
@@ -29,6 +29,9 @@ SABI_RIDE_API_KEY=your_sabi_ride_api_key
 # Web3 Configuration
 POLYGON_ZKEVM_RPC_URL=https://zkevm-rpc.com
 SABI_CASH_CONTRACT_ADDRESS=0x53308b85F0Fceadfc0a474eb0c196F0F02CD4983
+OPERATOR_PRIVATE_KEY=your_backend_wallet_private_key_here
+OPERATOR_ADDRESS=your_backend_wallet_address_here
+
 
 # Mining Configuration
 MINING_FREE_RATE=0.9
