--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "set NODE_ENV=development&& node --watch src/index.js",
-    "start": "NODE_ENV=production node src/index.js",
+    "start": "set NODE_ENV=production&& node src/index.js",
     "build": "echo 'No build step required for Node.js backend'",
     "db:setup": "node src/scripts/setupDatabase.js",
     "db:seed": "node src/scripts/seedDatabase.js",
