--- a/package.json
+++ b/package.json
@@ -6,24 +6,23 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy:thirdweb": "thirdweb deploy"
 	},
 	"dependencies": {
-		"@chakra-ui/react": "^3.24.0",
-		"@emotion/react": "^11.14.0",
-		"@emotion/styled": "^11.14.1",
+		"@chakra-ui/react": "^3.30.0",
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-toast": "^1.2.14",
-		"@rainbow-me/rainbowkit": "^2.2.8",
-		"@tailwindcss/postcss": "^4.1.11",
 		"@tanstack/query-core": "^5.85.5",
 		"@tanstack/react-query": "^5.85.5",
+		"@thirdweb-dev/chains": "^0.1.120",
 		"@thirdweb-dev/react": "^3.16.5",
 		"@thirdweb-dev/sdk": "^3.10.67",
 		"@uniswap/sdk-core": "^5.3.1",
 		"@uniswap/smart-order-router": "^4.22.20",
 		"@uniswap/v3-sdk": "^3.13.0",
-		"@wagmi/core": "^2.20.2",
 		"assert": "^2.1.0",
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
@@ -45,24 +44,40 @@
 		"stream-browserify": "^3.0.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
-		"util": "^0.12.5",
-		"viem": "^2.36.0",
-		"wagmi": "^2.15.7"
+		"util": "^0.12.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+		"@nomicfoundation/hardhat-network-helpers": "^1.1.2",
+		"@nomicfoundation/hardhat-toolbox": "^2.0.2",
+		"@nomiclabs/hardhat-ethers": "^2.2.3",
+		"@nomiclabs/hardhat-etherscan": "^3.1.8",
+		"@openzeppelin/contracts": "^5.4.0",
 		"@rollup/plugin-inject": "^5.0.5",
+		"@typechain/ethers-v5": "^10.2.1",
+		"@typechain/hardhat": "^6.1.6",
+		"@types/chai": "^4.3.20",
+		"@types/mocha": "^10.0.10",
 		"@types/node": "^24.0.15",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.4.1",
 		"autoprefixer": "^10.4.21",
+		"dotenv": "^16.6.1",
 		"eslint": "^9.25.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^16.0.0",
-		"postcss": "^8.5.6",
-		"tailwindcss": "^4.1.11",
-		"vite": "^6.3.5"
+		"hardhat": "^2.28.2",
+		"hardhat-gas-reporter": "^1.0.10",
+		"postcss": "^8.4.35",
+		"solidity-coverage": "^0.8.17",
+		"tailwindcss": "^3.4.1",
+		"thirdweb": "^5.117.2",
+		"ts-node": "^10.9.2",
+		"typechain": "^8.3.2",
+		"typescript": "^5.9.3",
+		"vite": "^5.2.0"
 	}
 }
