--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview",
-		"deploy:thirdweb": "thirdweb deploy"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^3.30.0",
@@ -15,14 +14,13 @@
 		"@emotion/styled": "^11.11.0",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-toast": "^1.2.14",
+		"@solana/wallet-adapter-base": "^0.9.27",
+		"@solana/wallet-adapter-react": "^0.15.39",
+		"@solana/wallet-adapter-react-ui": "^0.9.39",
+		"@solana/wallet-adapter-wallets": "^0.19.37",
+		"@solana/web3.js": "^1.98.4",
 		"@tanstack/query-core": "^5.85.5",
 		"@tanstack/react-query": "^5.85.5",
-		"@thirdweb-dev/chains": "^0.1.120",
-		"@thirdweb-dev/react": "^3.16.5",
-		"@thirdweb-dev/sdk": "^3.10.67",
-		"@uniswap/sdk-core": "^5.3.1",
-		"@uniswap/smart-order-router": "^4.22.20",
-		"@uniswap/v3-sdk": "^3.13.0",
 		"assert": "^2.1.0",
 		"axios": "^1.7.9",
 		"bcryptjs": "^3.0.2",
@@ -31,7 +29,6 @@
 		"clsx": "^2.1.1",
 		"crypto": "^1.0.1",
 		"crypto-browserify": "^3.12.1",
-		"ethers": "^5.8.0",
 		"express": "^4.21.2",
 		"framer-motion": "^12.23.6",
 		"lucide-react": "^0.525.0",
@@ -48,15 +45,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
-		"@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-		"@nomicfoundation/hardhat-network-helpers": "^1.1.2",
-		"@nomicfoundation/hardhat-toolbox": "^2.0.2",
-		"@nomiclabs/hardhat-ethers": "^2.2.3",
-		"@nomiclabs/hardhat-etherscan": "^3.1.8",
-		"@openzeppelin/contracts": "^5.4.0",
 		"@rollup/plugin-inject": "^5.0.5",
-		"@typechain/ethers-v5": "^10.2.1",
-		"@typechain/hardhat": "^6.1.6",
 		"@types/chai": "^4.3.20",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^24.0.15",
@@ -69,14 +58,9 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^16.0.0",
-		"hardhat": "^2.28.2",
-		"hardhat-gas-reporter": "^1.0.10",
 		"postcss": "^8.4.35",
-		"solidity-coverage": "^0.8.17",
 		"tailwindcss": "^3.4.1",
-		"thirdweb": "^5.117.2",
 		"ts-node": "^10.9.2",
-		"typechain": "^8.3.2",
 		"typescript": "^5.9.3",
 		"vite": "^5.2.0"
 	}
