--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,12 @@
     "test": "node --test src/tests/*.test.js"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.4",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "bs58": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ethers": "^5.8.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
@@ -29,6 +30,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
+    "tweetnacl": "^1.0.3",
     "uuid": "^9.0.1",
     "winston": "^3.15.0"
   },
