--- a/.env
+++ b/.env
@@ -9,18 +9,19 @@ VITE_THIRDWEB_SECRET_KEY=pGFEpeQS0VoQNsq34VYrKBOCrw5FJZE7CqpzMIgnfqYLEfB454OX-KQ
 VITE_ADMIN_ADDRESS=0x8324d27DE5eb746117906F5e10f44408Bca8d888
 
 # API Configuration (for backend integration)
-REACT_APP_API_BASE_URL=https://tmp.sabirideweb.com.ng
+REACT_APP_API_BASE_URL=http://localhost:8787
 REACT_APP_API_KEY=demo_api_key
-VITE_API_BASE_URL=https://sbc-server.onrender.com/api
+VITE_API_BASE_URL=http://localhost:8787/api
 VITE_SABI_RIDE_API_URL=https://tmp.sabirideweb.com.ng/api/v1
-API_BASE_URL=https://sbc-server.onrender.com/api
+API_BASE_URL=http://localhost:8787/api
 
 # Contract Addresses (demo addresses)
-REACT_APP_SABI_CASH_CONTRACT_ADDRESS=0x3884Ac9400D3D57eB8E94bcb5Bb6987477c3169d
-VITE_SABI_CASH_CONTRACT_ADDRESS=0x3884Ac9400D3D57eB8E94bcb5Bb6987477c3169d
-VITE_THIRDWEB_TOKEN_DROP_ADDRESS=0x3884Ac9400D3D57eB8E94bcb5Bb6987477c3169d
-REACT_APP_USDT_CONTRACT_ADDRESS=0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48
-SABI_CASH_CONTRACT_ADDRESS=0x3884Ac9400D3D57eB8E94bcb5Bb6987477c3169d
+# Update these with deployed Solana Program IDs
+REACT_APP_SABI_CASH_CONTRACT_ADDRESS=7e8b6...
+VITE_SABI_CASH_CONTRACT_ADDRESS=7e8b6...
+VITE_THIRDWEB_TOKEN_DROP_ADDRESS=
+REACT_APP_USDT_CONTRACT_ADDRESS=Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB
+SABI_CASH_CONTRACT_ADDRESS=7e8b6...
 # Environment
 NODE_ENV=development
 REACT_APP_ENVIRONMENT=development
