--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "test": "node --test src/tests/*.test.js"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
